# askdbt

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: getting-started.md
sample_data/: catalog.json  generate_sample_data.py  manifest.json
src/askdbt/: __init__.py  chat.py  cli.py  config.py  indexer.py  parser.py  retriever.py
tests/: test_parser.py  test_retriever.py
