[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "askdbt"
version = "0.1.0"
description = "AI-powered data dictionary chatbot for your dbt project — runs 100% locally via Ollama"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Raghuram Gudimetla" }]
keywords = ["dbt", "llm", "rag", "data-catalog", "ollama", "vector-database"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "click>=8.1",
  "sentence-transformers>=2.7",
  "requests>=2.31",
  "qdrant-client>=1.9",
  "streamlit>=1.35",
  "sqlglot>=20.0",
]

[project.optional-dependencies]
pgvector = ["psycopg2-binary>=2.9"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
]

[project.scripts]
askdbt = "askdbt.cli:cli"

[project.urls]
Homepage = "https://github.com/raghuram36/askdbt"
Repository = "https://github.com/raghuram36/askdbt"
"Bug Tracker" = "https://github.com/raghuram36/askdbt/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/askdbt"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
